tests/errors/Channel.recv_expects_0_arguments.n
async fn bad_recv() {
    ch := Channel<int>();
    await ch.recv(1);
}

fn main() {
}
